Actualizado nombre de proyecto y versión

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "my-v0-project",
-  "version": "0.1.0",
-  "private": true,
+  "name": "caverbob-web",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
